Fix signed vs unsigned comparision warning in JSBigInt https://bugs.webkit.org/show_bug.cgi?id=222400

Patch by Dmitry Bezhetskov <dbezhetskov@igalia.com> on 2021-02-25
Reviewed by Yusuke Suzuki.

Fix the warning about comparing uint64_t with int64_t in JSBigInt.

* runtime/JSBigInt.cpp:
(JSC::JSBigInt::parseInt):

Canonical link: https://commits.webkit.org/234559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273480 268f45cc-cd09-0410-ab3c-d52691b4dbfc